config-and-policy/cluster/constraint-namespace-cost-centre.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: all-must-have-cost-center
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
  parameters:
    message: "All namespaces must have a `cost-center` label that points to your division"
    labels:
      - key: cost-center
        allowedRegex: "^[a-zA-Z]+.anthos-security-demo.com$"
